# noteventificationforhandlerwarder

./: .WORKFLOW  .gitignore  .secret  CONTRIBUTING.md  README.md  pyproject.toml
docs/: conf.py  index.rst
eventhandler/: .gitconfig  README.md  (+2 more)
notificationforwarder/: README.md  demo_logger.py  pyproject.toml  received_payload.json  send
notificationforwarder/docs/: NOTE  handover-modernize-notificationforwarder-foundation.md
notificationforwarder/src/notificationforwarder/: __init__.py  baseclass.py  component_loader.py  runtime_config.py  runtime_flow.py  spool.py  util.py
notificationforwarder/src/notificationforwarder/email/: formatter.py  forwarder.py
notificationforwarder/src/notificationforwarder/example/: formatter.py  forwarder.py
notificationforwarder/src/notificationforwarder/naemonlog/: reporter.py
notificationforwarder/src/notificationforwarder/nostr/: EXAMPLE.txt  __init__.py  formatter.py  forwarder.py
notificationforwarder/src/notificationforwarder/oauth2webhook/: INDEX.md  forwarder.py
notificationforwarder/src/notificationforwarder/rabbitmq/: formatter.py  forwarder.py
notificationforwarder/src/notificationforwarder/syslog/: formatter.py  forwarder.py
notificationforwarder/src/notificationforwarder/telegram/: forwarder.py
notificationforwarder/src/notificationforwarder/text/: logger.py
notificationforwarder/tests/: TESTS.md  test_alertmanager.py  test_builtin_plugins_focus.py  test_classes.py  test_contracts_formatters.py  test_contracts_forwarders.py  test_contracts_reporters.py  test_delivery_resilience.py  test_formatter.py  test_integration_cli.py  test_loading_resolution.py  test_loggers.py  test_nostr.py  test_oauth2webhook.py  test_orchestration_flow.py  test_package.py  test_pythonpath.py  test_reporter.py  test_resilience_spool.py  test_runtime_foundation.py  test_webhook.py
(+112 files in other folders)
