[build-system]
requires = ["flit_core >=3.2,<4", "coshsh"]
build-backend = "flit_core.buildapi"

[project]
name = "omdnotificationforwarder"
version = "0.0.1"
authors = [
  { name="Gerhard Lausser", email="lausser@yahoo.com" },
]
description = "A framework for notification scripts for OMD"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "coshsh",
    "jinja2",
]

[project.optional-dependencies]
test = [
    "unittest",
    "pytest >= 2.7.3",
    "pytest-cov",
]

[project.urls]
"Homepage" = "https://github.com/lausser/noteventificationforhandlerwarder"
"Bug Tracker" = "https://github.com/lausser/noteventificationforhandlerwarder/issues"

[tool.flit.module]
name = "notificationforwarder"

[tool.pytest.ini_options]
addopts = "-ra -q --import-mode=importlib"
pythonpath = [
    "src/"
]
testpaths = [
    "tests",
]
